--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -46,8 +46,8 @@
 
   <!-- 액션 경로만 컨트롤러와 맞추면 됩니다 -->
   <form th:action="@{/login}" method="post">
-    <label for="id">User ID</label>
-    <input type="text" id="id" name="id" placeholder="Enter your ID" required>
+    <label for="name">User ID</label>
+    <input type="text" id="name" name="name" placeholder="Enter your ID" required>
 
     <label for="pass">Password</label>
     <input type="password" id="pass" name="pass" placeholder="Enter password" required>
